[metadata]
name = mer
version = 0.1.1
author = kconnour
description = Mars-Earth retimer
long_description = file: README.rst
project_urls =
   Download = https://pypi.org/project/mer/
   Source Code = https://github.com/kconnour/mer
   Documentation = https://kconnour.github.io/mer/
   Bug Tracker = https://github.com/kconnour/mer/issues
classifiers =
   Development Status :: 3 - Alpha
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3.9
   Operating System :: OS Independent
   Topic :: Scientific/Engineering

[options]
include_package_data = True
python_requires = >= 3.9
packages = find:

[options.extras_require]
docs =
   Sphinx
   sphinx-rtd-theme

test =
   pytest
