[metadata]
name = mer
version = 0.3.0
author = Kyle Connour
description = Mars-Earth retimer
long_description = file: README.rst
project_urls =
   Download = https://pypi.org/project/mer/
   Source Code = https://github.com/kconnour/mer
   Documentation = https://kconnour.github.io/mer/
   Bug Tracker = https://github.com/kconnour/mer/issues
classifiers =
   Development Status :: 4 - Beta
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Operating System :: OS Independent
   Topic :: Scientific/Engineering

[options]
include_package_data = True
python_requires = >= 3.8
packages = mars_time

[options.extras_require]
dev =
   tox

doc =
   Sphinx
   pydata-sphinx-theme

test =
   pytest
