[metadata]
name = mars_time
version = 1.0.0
author = Kyle Connour
description = Convert between Earth times and Mars times.
long_description = file: README.rst
project_urls =
   Download = https://pypi.org/project/mars_time
   Source Code = https://github.com/kconnour/mars_time
   Documentation = https://kconnour.github.io/mars_time
   Bug Tracker = https://github.com/kconnour/mars_time/issues
classifiers =
   Development Status :: 4 - Beta
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Operating System :: OS Independent
   Topic :: Scientific/Engineering

[options]
include_package_data = True
python_requires = >= 3.6
packages = mars_time
install_requires =
   numpy
   scipy

[options.extras_require]
all =
   Sphinx
   pydata-sphinx-theme
   pytest
   tox

doc =
   Sphinx
   pydata-sphinx-theme

test =
   pytest
   tox
